# super-agent-teams-plugin

./: .gitignore  .mcp.json  CONTRIBUTING.md  README.md
plugins/tk-agent-team/: .mcp.json  pyproject.toml
plugins/tk-agent-team/.claude-plugin/: plugin.json
plugins/tk-agent-team/agents/: README.md  _TEMPLATE.md  curator.md  debugger.md  docs-writer.md  orchestrator.md  researcher.md  routing.yaml  routing.yaml.schema.md  team-lead.md
plugins/tk-agent-team/agents/design/: brand-guardian.md  ui-designer.md  ux-architect.md  ux-researcher.md
plugins/tk-agent-team/agents/developer/: backend.md  frontend.md
plugins/tk-agent-team/agents/engineering/: ai-engineer.md  data-engineer.md  devops.md  sre.md
plugins/tk-agent-team/agents/framework/: astro.md  motion.md  react.md  vue.md
plugins/tk-agent-team/agents/marketing/: content-creator.md  growth-hacker.md  seo-specialist.md  social-strategist.md
plugins/tk-agent-team/agents/planner/: product.md  technical.md
plugins/tk-agent-team/agents/reviewer/: architecture.md  correctness.md  security.md
plugins/tk-agent-team/agents/tester/: integration.md  unit.md
plugins/tk-agent-team/commands/: brainstorm.md  ideate.md  plan.md  review.md  ship.md  test.md  work.md
plugins/tk-agent-team/mcp-servers/agent-substrate/: README.md  pyproject.toml
plugins/tk-agent-team/skills/_shared/: findings-schema.md  memory-protocol.md  team-protocol.md
plugins/tk-agent-team/templates/: _TEMPLATE.md.example
plugins/tk-agent-team/tests/: test_command_orchestrator_dispatch.py  test_review_dedup_structure.py  test_routing.py
(+66 files in other folders)
