[project]
name = "tk-agent-team"
version = "0.4.0"
description = "Test harness for the tk-agent-team Claude Code plugin (routing fixtures, etc.)."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
