[project]
name = "agent-substrate"
version = "0.1.0"
description = "MCP server providing per-agent YAML memory with curation hygiene, for use with Claude Code Agent Teams"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Asbury Labs" }]
dependencies = [
    "mcp>=1.2.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "portalocker>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
agent-substrate = "agent_substrate.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_substrate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
